@@ -16,6 +16,7 @@
 #include <sys/stat.h>
 #include "common.h"
 #include "terms.h"
+#include "metaprint.h"
 
 #include "debug.h"
 
@@ -167,6 +168,7 @@ void print_buf(const char* prefix, out123_handle *ao)
 void print_stat(mpg123_handle *fr, long offset, out123_handle *ao, int draw_bar
 ,	struct parameter *param)
 {
+	static int old_term_width = -1;
 	size_t buffered;
 	off_t decoded;
 	off_t elapsed;
@@ -240,6 +242,23 @@ void print_stat(mpg123_handle *fr, long offset, out123_handle *ao, int draw_bar
 		/* 255 is enough for the data I prepare, if there is no terminal width to
 		   fill */
 		maxlen  = term_width(STDERR_FILENO);
+		if(draw_bar && maxlen > 0 && maxlen < old_term_width)
+		{
+			// Hack about draw_bar: That's the normal print_stat that is not followed by
+			// metadata anyway. No need to double things.
+			print_stat(fr, offset, ao, 0, param);
+			if(param->verbose > 2)
+				fprintf(stderr,"Note: readjusting for smaller terminal (%d to %d)\n", old_term_width, maxlen);
+			fprintf(stderr, "\n\n\n");
+			if(param->verbose > 1)
+				print_header(fr);
+			else
+				print_header_compact(fr);
+			print_id3_tag(fr, param->long_id3, stderr, maxlen);
+			fprintf(stderr, "\n");
+		}
+		if(draw_bar)
+			old_term_width = maxlen;
 		linelen = maxlen > 0 ? maxlen : (sizeof(linebuf)-1);
 		line = linelen >= sizeof(linebuf)
 		?	malloc(linelen+1) /* Only malloc if it is a really long line. */
@@ -381,13 +400,6 @@ void print_stat(mpg123_handle *fr, long offset, out123_handle *ao, int draw_bar
 			else
 			fprintf(stderr, "\r%s", line);
 		}
-	}
-	/* Check for changed tags here too? */
-	if( mpg123_meta_check(fr) & MPG123_NEW_ICY && MPG123_OK == mpg123_icy(fr, &icy) )
-	{
-		if(line) /* Clear the inverse video. */
-			fprintf(stderr, "\r%s", line);
-		fprintf(stderr, "\nICY-META: %s\n", icy);
 	}
 	if(line && line != linebuf)
 		free(line);
